Remove USSD code - not live yet

--- a/index.html
+++ b/index.html
@@ -490,8 +490,8 @@
             <div class="phone-mockup">
                 <div class="phone-screen">
                     <div class="phone-header">
-                        <div class="ussd-code">*384*12345#</div>
-                        <p>TooTriv PayDay Advance</p>
+                        <div class="ussd-code">TooTriv</div>
+                        <p>PayDay Advance</p>
                     </div>
                     <div class="phone-menu-item">
                         <span class="phone-menu-num">1</span>
@@ -665,7 +665,7 @@
             <div class="channel-card">
                 <div class="channel-icon">📞</div>
                 <h4>USSD</h4>
-                <p>Dial *384*12345# from any phone — no internet required. Perfect for the 70% of Nigerians without smartphones.</p>
+                <p>Dial a short USSD code from any phone — no internet required. Perfect for the 70% of Nigerians without smartphones.</p>
                 <span class="channel-badge badge-live">Live</span>
             </div>
             <div class="channel-card">
