--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TooTriv Financial Services — Salary Advance for Every Nigerian Worker</title>
     <meta name="description" content="TooTriv offers instant, affordable salary-backed loans to Nigerian salaried employees via USSD, Web, and Mobile. Get up to ₦100,000 in under 5 minutes.">
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 200'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' stop-color='%230A8754'/%3E%3Cstop offset='100%25' stop-color='%23065F3B'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect x='16' y='40' width='168' height='28' rx='8' ry='8' fill='url(%23g)'/%3E%3Crect x='48' y='40' width='28' height='124' rx='8' ry='8' fill='url(%23g)'/%3E%3Crect x='124' y='40' width='28' height='124' rx='8' ry='8' fill='url(%23g)'/%3E%3Ccircle cx='100' cy='130' r='10' fill='%23F7B32B'/%3E%3C/svg%3E">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
