--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
                     <rect x="124" y="40" width="28" height="124" rx="8" ry="8" fill="url(#navGrad)"/>
                     <circle cx="100" cy="130" r="10" fill="#F7B32B"/>
                 </svg>
-                TooTriv
+                Too<span>Triv</span>
             </div>
         <div class="nav-links">
             <a href="#problem">Problem</a>
@@ -956,7 +956,7 @@
                         <rect x="124" y="40" width="28" height="124" rx="8" ry="8" fill="url(#footGrad)"/>
                         <circle cx="100" cy="130" r="10" fill="#F7B32B"/>
                     </svg>
-                    TooTriv
+                    Too<span>Triv</span>
                 </div>
                 <p>
                     TooTriv Financial Services is building the future of salary-backed lending in Africa —
