Add TT logo as favicon

--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
                         My Account
                     </div>
                     <div style="text-align:center; margin-top:20px;">
-                        <span style="background:var(--accent);color:var(--dark);padding:8px 24px;border-radius:20px;font-size:.8rem;font-weight:700;">Get up to ₦100,000</span>
+                        <span style="background:var(--accent);color:var(--dark);padding:8px 24px;border-radius:20px;font-size:.8rem;font-weight:700;">Get quick loans</span>
                     </div>
                 </div>
             </div>
