Add TT logo as favicon

--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
                 <div class="channel-icon">📞</div>
                 <h4>USSD</h4>
                 <p>Dial a short USSD code from any phone — no internet required. Perfect for the 70% of Nigerians without smartphones.</p>
-                <span class="channel-badge badge-live">Live</span>
+                <span class="channel-badge badge-soon">Coming Soon</span>
             </div>
             <div class="channel-card">
                 <div class="channel-icon">🌐</div>
