feat: add office address to landing page footer

--- a/index.html
+++ b/index.html
@@ -962,6 +962,10 @@
                     TooTriv Financial Services is building the future of salary-backed lending in Africa —
                     fast, affordable, and accessible to every worker.
                 </p>
+                <p style="margin-top:16px;font-size:.85rem;line-height:1.6;display:flex;align-items:flex-start;gap:6px;">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink:0;margin-top:2px;"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path><circle cx="12" cy="10" r="3"></circle></svg>
+                    2 Ibidapo Shobowale Street,<br>Shofunwa Estate, Ikorodu, Lagos, Nigeria
+                </p>
             </div>
             <div class="footer-col">
                 <h4>Product</h4>
@@ -982,10 +986,11 @@
                 <a href="mailto:hello@tootriv.com">hello@tootriv.com</a>
                 <a href="#">LinkedIn</a>
                 <a href="#">Twitter / X</a>
+                <p style="font-size:.85rem;margin-top:12px;line-height:1.5;">2 Ibidapo Shobowale Street,<br>Shofunwa Estate, Ikorodu,<br>Lagos, Nigeria</p>
             </div>
         </div>
         <div class="footer-bottom">
-            &copy; 2026 TooTriv Financial Services. All rights reserved. | Lagos, Nigeria
+            &copy; 2026 TooTriv Financial Services. All rights reserved. | 2 Ibidapo Shobowale Street, Shofunwa Estate, Ikorodu, Lagos, Nigeria
         </div>
     </div>
 </footer>
